--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-	<!-- header -->
+<div class="wrapper"><!-- header -->
 	<header class="header">
 		<div class="container">
 			<div class="header__left">
@@ -23,25 +23,25 @@
 				<nav class="header__nav">
 					<ul class="header__list">
 						<li class="header__item">
-							<a href="#">Главная</a>
+							<a class="header__menu-link header__menu-link__main" href="#">Главная</a>
 						</li>
 						<li class="header__item">
-							<a href="#">Отзывы</a>
+							<a class="header__menu-link header__menu-link__feed" href="#">Отзывы</a>
 						</li>
 						<li class="header__item">
-							<a href="#">Услуги</a>
+							<a class="header__menu-link header__menu-link__service" href="#">Услуги</a>
 						</li>
 					</ul>
 				</nav>
 			</div>
 			<div class="header__right">
 				<address class="contacts">
-					<a href="#" class="phone"></a>
+					<a href="tel:+78000039210" class="phone">8 (800) 00-392-10</a>
+					<div class="dropdown__header">График работы</div>
 					<div class="dropdown">
-						<div class="dropdown__header">Режим работы</div>
 						<ul class="dropdown__list">
-							<li class="dropdown__item">н-вс: 09:00-20:00</li>
-							<li class="dropdown__item">обед: 14:00-14:30</li>
+							<li class="dropdown__item dropdown__item_work-time">пн-вс: 09:00-20:00</li>
+							<li class="dropdown__item dropdown__item_dinner-time">обед: 14:00-14:30</li>
 						</ul>
 					</div>
 				</address>
@@ -92,36 +92,45 @@
 				<ul class="last-news__list">
 					<li class="last-news__item">
 						<div class="last-news__img">
-							<img src="img/dynamic_content_img/last_news/new1.jpg" alt="новость" class="last-news__img-pic">
+							<img src="img/dynamic_content_img/last_news/new1.jpg" alt="новость"
+								 class="last-news__img-pic">
 						</div>
 						<article class="last-news__content">
 							<div class="last-news__date">12.10.2016</div>
 							<h3 class="last-news__header">Похудение с помощью бодибилдинга!</h3>
-							<p class="last-news__text">Вдыхание одного литра кислорода эквивалентно «сжиганию» 5 калорий, однако в минуту при самом высоком темпе движений
-								атлет способен вдохнуть не более 3-4 литров кислорода. Это крайне важно для каждого начинающего атлета.</p>
+							<p class="last-news__text">Вдыхание одного литра кислорода эквивалентно «сжиганию» 5
+								калорий, однако в минуту при самом высоком темпе движений
+								атлет способен вдохнуть не более 3-4 литров кислорода. Это крайне важно для каждого
+								начинающего атлета.</p>
 						</article>
 					</li>
 					<li class="last-news__item">
 						<div class="last-news__img">
-							<img src="img/dynamic_content_img/last_news/new3.jpg" alt="новость" class="last-news__img-pic">
+							<img src="img/dynamic_content_img/last_news/new3.jpg" alt="новость"
+								 class="last-news__img-pic">
 						</div>
 						<article class="last-news__content">
 							<div class="last-news__date">22.12.2015</div>
 							<h3 class="last-news__header">Фрилансер? Выпрями спину!</h3>
-							<p class="last-news__text">Создайте рабочее место под себя. Вот этот инструмент поможет определить, что подходит именно вам и вашему организму.
-								Используйте специальную подставку для ноутбука, если вы проводите за ним больше 2 часов. Настройте высоту и яркость
+							<p class="last-news__text">Создайте рабочее место под себя. Вот этот инструмент поможет
+								определить, что подходит именно вам и вашему организму.
+								Используйте специальную подставку для ноутбука, если вы проводите за ним больше 2 часов.
+								Настройте высоту и яркость
 								монитора!</p>
 						</article>
 					</li>
 					<li class="last-news__item">
 						<div class="last-news__img">
-							<img src="img/dynamic_content_img/last_news/new2.jpg" alt="новость" class="last-news__img-pic">
+							<img src="img/dynamic_content_img/last_news/new2.jpg" alt="новость"
+								 class="last-news__img-pic">
 						</div>
 						<article class="last-news__content">
 							<div class="last-news__date">01.02.2016</div>
 							<h3 class="last-news__header">Заражай друзей, получай призы!</h3>
-							<p class="last-news__text">Дополнительно для Вас: пользование сауной и предоставление средств личной гигиены, пользование баром, таблица замеров,
-								дружеская атмосфера и постоянная поддержка. Мы запотимся о вашем комфорте и предлагаем испытать это уже сегодня!</p>
+							<p class="last-news__text">Дополнительно для Вас: пользование сауной и предоставление
+								средств личной гигиены, пользование баром, таблица замеров,
+								дружеская атмосфера и постоянная поддержка. Мы запотимся о вашем комфорте и предлагаем
+								испытать это уже сегодня!</p>
 						</article>
 					</li>
 				</ul>
@@ -131,17 +140,20 @@
 					<ul class="top-news__list">
 						<li class="top-news__item">
 							<a href="#" class="top-news__link">
-								<img src="img/dynamic_content_img/top_news/new1.jpg" alt="топ-новость" class="top-news__pic">
+								<img src="img/dynamic_content_img/top_news/new1.jpg" alt="топ-новость"
+									 class="top-news__pic">
 							</a>
 						</li>
 						<li class="top-news__item">
 							<a href="#" class="top-news__link">
-								<img src="img/dynamic_content_img/top_news/new2.jpg" alt="топ-новость" class="top-news__pic">
+								<img src="img/dynamic_content_img/top_news/new2.jpg" alt="топ-новость"
+									 class="top-news__pic">
 							</a>
 						</li>
 						<li class="top-news__item">
 							<a href="#" class="top-news__link">
-								<img src="img/dynamic_content_img/top_news/new3.jpg" alt="топ-новость" class="top-news__pic">
+								<img src="img/dynamic_content_img/top_news/new3.jpg" alt="топ-новость"
+									 class="top-news__pic">
 							</a>
 						</li>
 					</ul>
@@ -179,7 +191,8 @@
 
 	<!-- footer -->
 	<footer class="footer">
-		<div class="footer__left">Сделано с любовью и старанием на курсе «HTML + CSS» в LoftSchool. Автор работы: Прохладов Вадим
+		<div class="footer__left">Сделано с любовью и старанием на курсе «HTML + CSS» в LoftSchool. Автор работы:
+			Прохладов Вадим
 		</div>
 		<div class="footer__center">
 			<a href="#" class="header__logo">Афродита</a>
@@ -195,6 +208,7 @@
 			</div>
 		</div>
 	</footer>
+</div>
 
 </body>
 
